--- a/Demo/AngelEyesRMB/.classpath
+++ b/Demo/AngelEyesRMB/.classpath
@@ -4,11 +4,11 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="lib" path="lib/commons-codec-1.4.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-4.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/httpclient-cache-4.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/httpcore-4.1.4.jar"/>
-	<classpathentry kind="lib" path="lib/httpmime-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpclient-cache-4.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpcore-4.1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/httpmime-4.1.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
